# Team7

./: .gitignore  README.md  avg psnssim.txt  color.py  denoise.py  descriptors.py  filtering.py  keypoints.py  main copy.py  main.py  main_v2.py  metrics.py  morphology.py  preprocess.py  pyproject.toml  qsd1_w1-custom_hsv_block_hist_concat-color.pkl  qsd1_w1-custom_hsv_hier_block_hist_concat-color.pkl  qsd1_w1-hsv_histogram_concat-color.pkl  qsd1_w1-hsv_histogram_concat-rgb.pkl  requirements.txt  retrieval.py  segmentation.py  similarity.py  test1.py  test_adri.py  test_adri2.py  test_adrian.py  tests.ipynb  visualize.ipynb  visualize_results.py
color/: base.py
descriptor/: base.py
filtering/: laplacian.py  linear.py
morphology/: base.py
prediction/: base.py
retrieval/: base.py
similarity/: base.py
